# black-hat-rust

./: .gitignore
ch_01/sha1_cracker/: Cargo.toml  justfile
ch_01/sha1_cracker/tests/: services.rs
