[package]
name = "sha1_cracker"
version = "0.1.0"
authors = ["Sylvain Kerkour <sylvain@kerkour.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha-1 = "0.10"
hex = "0.4"
structopt = "0.3.25"
anyhow = "1.0"
ctrlc = "3.2.1"
crossbeam-channel = "0.5.1"
signal-hook = "0.3.10"
log = "0.4.14" 
env_logger = "0.9.0"
galvanic-test = "0.2.0"

[dev-dependencies]
assert_cmd = "2.0.2"
predicates = "2.1.0"